<resources>
    <string name="app_name">Meu Cinema</string>
    <string name="item_filter_title">Filtrar</string>
    <string name="subitem_most_popular">Mais Populares</string>
    <string name="subitem_top_rating">Melhor Classificação</string>
    <string name="subitem_favorites">Favoritos</string>
    <string name="movie_list_not_found_text">Erro ao buscar lista de filmes, tente novamente mais tarde</string>
    <string name="movie_list_not_found_titulo">Oops</string>
    <string name="loading_data">Carregando…</string>
    <string name="field_movie_trailers">Trailers</string>
    <string name="field_movie_title">Título</string>
    <string name="field_movie_overview">Descrição</string>
    <string name="field_movie_duration">Duração</string>
    <string name="field_movie_rating">Nota</string>
    <string name="field_movie_release_date">Lançamento</string>
    <string name="field_movie_poster">Poster</string>
    <string name="field_movie_review">Reviews</string>
    <string name="fetching_data">Carregando dados…</string>
    <string name="no_internet_connection">Oops… Parece que você está sem internet</string>
    <string name="refresh_title">Atualizar</string>
    <string name="no_trailers">Não há trailers para este filme</string>
    <string name="no_reviews">Não há reviews para este filme</string>
    <string name="fail_trailer">Falha ao buscar os trailers, tente atualizar</string>
    <string name="fail_reviews">Falha ao buscar os reviews, tente atualizar</string>
    <string name="favorite_title">Favoritar</string>


</resources>
