<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/refresh_title"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title="@string/item_filter_title"
        app:showAsAction="ifRoom">

        <menu>
            <item android:id="@+id/action_most_popular"
                android:title="@string/subitem_most_popular" />

            <item android:id="@+id/action_top_rating"
            android:title="@string/subitem_top_rating" />

            <item android:id="@+id/action_favorites"
                android:title="@string/subitem_favorites" />
        </menu>

    </item>

</menu>